--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "exif-js": "^2.3.0",
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
